Fix T48001: Highlighting selected item in filtered lists.

active index was not reset to 'nothing' in case actual active item was filtered out.